New Changes Pages

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </ul>
                     <img src="images/drinks.png" width="120" height="126" alt="Drinks">
                 </div>
-                <div class="category">
+                <div class="category" id="item3">
                     <ul class="item3">
                         <h2>F. Chicken</h2>
                         <li><p>Starting</p><p>$4.00</p></li>
