--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     </div>
                 </div>
                 <div class="sign-in">
-                    <p>Already member of our community?</p>
-                    <p><a href="#">Sign in</a></p>
+                    <p class="p1">Already member of our community?</p>
+                    <p class="p2"><a href="#">Sign in</a></p>
                 </div>
             </div>
             <div class="panel-img">
