--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/main.css"> <!-- Assuming compiled SCSS -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="script.js"></script>
+    <link rel="website icon" type="png"  href="images/Logoicon.png">
     <title>Besnik - Trang chủ</title>
 </head>
 <body>
