add loading for img

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <img src="images/Logo.png" alt="logo" class="logo">
+        <img src="images/Logo.png" loading="eager" alt="logo" class="logo">
         <div class="menu-toggle">
             <span></span>
             <span></span>
@@ -26,7 +26,7 @@
         <div class="auth-buttons">
             <button class="sign-up-btn">Sign Up</button>
             <button class="cart-btn">
-                <img src="images/Icon.svg" alt="">
+                <img src="images/Icon.svg" loading="eager" alt="">
             </button>
         </div>
     </nav>
@@ -39,7 +39,7 @@
                 <div class="search-container">
                     <input type="text" placeholder="Enter your delivery location" class="search-input">
                     <button class="location-btn">
-                        <img src="images/IconCham.svg" alt="">
+                        <img src="images/IconCham.svg" loading="eager" alt="">
                     </button>
                     <div class="discover-btn-container">
                         <button class="discover-btn">
@@ -58,14 +58,14 @@
                 </div>
             </div>
             <div class="panel-img">
-                <img src="images/Content.png" alt="Content">
+                <img src="images/Content.png" loading="lazy" alt="Content">
                 <div class="shape"></div>
             </div>
         </div>
 
         <div id="categories" class="content-section">
             <div class="categories-title">
-                <h1>Food near me <img src="images/Icon Fire.svg" alt="Fire"></h1>
+                <h1>Food near me <img src="images/Icon Fire.svg" loading="lazy" alt="Fire"></h1>
                 <div class="navigation-buttons">
                     <button class="nav-button prev">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -85,49 +85,49 @@
                         <h2>Pizza</h2>
                         <li><p>Starting</p><p>$14.00</p></li>
                     </ul>
-                    <img src="images/pizza1.png" width="124" height="124" alt="Pizza">
+                    <img src="images/pizza1.png" loading="lazy" width="124" height="124" alt="Pizza">
                 </div>
                 <div class="category">
                     <ul class="item2">
                         <h2>Drinks</h2>
                         <li><p>Starting</p><p>$2.00</p></li>
                     </ul>
-                    <img src="images/drinks.png" width="120" height="126" alt="Drinks">
+                    <img src="images/drinks.png" loading="lazy" width="120" height="126" alt="Drinks">
                 </div>
                 <div class="category" id="item3">
                     <ul class="item3">
                         <h2>F. Chicken</h2>
                         <li><p>Starting</p><p>$4.00</p></li>
                     </ul>
-                    <img src="images/chiken1.png" width="129" height="87" alt="F Chicken" style="transform: rotate(90deg);">
+                    <img src="images/chiken1.png" loading="lazy" width="129" height="87" alt="F Chicken" style="transform: rotate(90deg);">
                 </div>
                 <div class="category">
                     <ul class="item4">
                         <h2>French F</h2>
                         <li><p>Starting</p><p>$8.00</p></li>
                     </ul>
-                    <img src="images/French F 1.png" width="112" height="154" alt="French Fries">
+                    <img src="images/French F 1.png" loading="lazy" width="112" height="154" alt="French Fries">
                 </div>
                 <div class="category">
                     <ul class="item4">
                         <h2>French F</h2>
                         <li><p>Starting</p><p>$8.00</p></li>
                     </ul>
-                    <img src="images/French F 1.png" width="112" height="154" alt="French Fries">
+                    <img src="images/French F 1.png" loading="lazy" width="112" height="154" alt="French Fries">
                 </div>
                 <div class="category">
                     <ul class="item4">
                         <h2>French F</h2>
                         <li><p>Starting</p><p>$8.00</p></li>
                     </ul>
-                    <img src="images/French F 1.png" width="112" height="154" alt="French Fries">
+                    <img src="images/French F 1.png" loading="lazy" width="112" height="154" alt="French Fries">
                 </div>
                 <div class="category">
                     <ul class="item4">
                         <h2>French F</h2>
                         <li><p>Starting</p><p>$8.00</p></li>
                     </ul>
-                    <img src="images/French F 1.png" width="112" height="154" alt="French Fries">
+                    <img src="images/French F 1.png" loading="lazy" width="112" height="154" alt="French Fries">
                 </div>
             </div>
         </div>
@@ -139,17 +139,17 @@
             </div>
             <div class="features">
                 <div class="feature-item">
-                    <img src="images/Iconform.svg" alt="Easy to order">
+                    <img src="images/Iconform.svg" loading="lazy" alt="Easy to order">
                     <h3>Easy to order</h3>
                     <p>In restaurant-controlled online food ordering, the restaurant ..</p>
                 </div>
                 <div class="feature-item">
-                    <img src="images/Iconlocated.svg" alt="Live Order">
+                    <img src="images/Iconlocated.svg" loading="lazy" alt="Live Order">
                     <h3>Live Order</h3>
                     <p>In addition to paying for the food, customers will often have to pay ..</p>
                 </div>
                 <div class="feature-item">
-                    <img src="images/IconBestQuality.svg" alt="Best Quality">
+                    <img src="images/IconBestQuality.svg" loading="lazy" alt="Best Quality">
                     <h3>Best Quality</h3>
                     <p>Grocery delivery companies will deliver groceries, pre-prep ..</p>
                 </div>
@@ -162,11 +162,11 @@
                     </div>
                     <div class="sale-right">
                         <div class="discount">50% <p>off</p></div>
-                        <img src="images/Iconsoup2.2.svg" alt="Soup" class="soup-bowl">
-                        <img src="images/Iconsoup1.1.svg" alt="Pot" class="soup-pot">
-                        <img src="images/Iconsoup3.1.svg" alt="Bowl" class="soup-bowl2">
-                        <div class="steam steam1"><img src="images/Abstract.svg" alt=""></div>
-                        <div class="steam steam2"><img src="images/Abstract2.svg" alt=""></div>
+                        <img src="images/Iconsoup2.2.svg" loading="lazy" alt="Soup" class="soup-bowl">
+                        <img src="images/Iconsoup1.1.svg" loading="lazy" alt="Pot" class="soup-pot">
+                        <img src="images/Iconsoup3.1.svg" loading="lazy" alt="Bowl" class="soup-bowl2">
+                        <div class="steam steam1"><img src="images/Abstract.svg" loading="lazy" alt=""></div>
+                        <div class="steam steam2"><img src="images/Abstract2.svg" loading="lazy" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -179,7 +179,7 @@
             </div>
             <div class="box-container">
                 <div class="box">
-                    <img src="images/box-1.png" alt="">
+                    <img src="images/box-1.png" loading="lazy" alt="">
                     <div class="stars">★★★★★</div>
                     <h2>New York-Style pizza</h2>
                     <p>Lorem Ipsum Lorem Ipsum is simply and dummy text of the printing.</p>
@@ -201,7 +201,7 @@
                     </div>
                 </div>
                 <div class="box" id="box2">
-                    <img src="images/box-2.png" alt="">
+                    <img src="images/box-2.png" loading="lazy" alt="">
                     <div class="stars">★★★★★</div>
                     <h2>Bento Ekiben Makunchi ..</h2>
                     <p>Lorem Ipsum Lorem Ipsum is simply and dummy text of the printing.</p>
@@ -223,7 +223,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="images/box-3.png" alt="">
+                    <img src="images/box-3.png" loading="lazy" alt="">
                     <div class="stars">★★★★★</div>
                     <h2>Humburger Veggei ..</h2>
                     <p>Ut enim ad minim veniam, quis nostrud exercitation.</p>
@@ -245,7 +245,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="images/box-4.png" alt="">
+                    <img src="images/box-4.png" loading="lazy" alt="">
                     <div class="stars">★★★★★</div>
                     <h2>New York-Style pizza</h2>
                     <p>Lorem Ipsum is simply dummy text.</p>
@@ -267,7 +267,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="images/box-5.png" alt="">
+                    <img src="images/box-5.png" loading="lazy" alt="">
                     <div class="stars">★★★★★</div>
                     <h2>New York-Style pizza</h2>
                     <p>Lorem Ipsum is simply dummy text.</p>
@@ -289,7 +289,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="images/box-6.png" alt="">
+                    <img src="images/box-6.png" loading="lazy" alt="">
                     <div class="stars">★★★★★</div>
                     <h2>New York-Style pizza</h2>
                     <p>Lorem Ipsum is simply dummy text.</p>
@@ -345,7 +345,7 @@
                         <div class="input-container">
                             <input type="text" placeholder="427 Edington Drive" />
                             <span class="icon">
-                                <img src="images/chamdo.svg" alt="">
+                                <img src="images/chamdo.svg" loading="lazy" alt="">
                             </span>
                         </div>
                     </div>
@@ -355,62 +355,62 @@
                         <div class="input-container">
                             <input type="text" placeholder="427 Edington Drive" />
                             <span class="icon">
-                                <img src="images/chamdo.svg" alt="">
+                                <img src="images/chamdo.svg" loading="lazy" alt="">
                             </span>
                         </div>
                     </div>
                 </div>
                 <div class="map-section">
                     <div class="time-indicator">
-                        <img src="images/map.png" width="450" height="590" alt="">
+                        <img src="images/map.png" loading="lazy" width="450" height="590" alt="">
                     </div>
                     <div class="location-container">
                         <div class="location-pin" style="width: 30px; height: 30px; top: 30%; left: 33%;">
                             <div class="pin-outer">
                                 <div class="pin-inner">
-                                    <img src="images/delivery-bike 1.svg" width="11" height="11" alt="Delivery Bike">
+                                    <img src="images/delivery-bike 1.svg" loading="lazy" width="11" height="11" alt="Delivery Bike">
                                 </div>
                             </div>
                         </div>
                         <div class="location-pin" style="width: 20px; height: 20px; top: 32%; left: 62%;">
                             <div class="pin-outer">
                                 <div class="pin-inner">
-                                    <img src="images/delivery-bike 1.svg" width="30" height="30" alt="Delivery Bike">
+                                    <img src="images/delivery-bike 1.svg" loading="lazy" width="30" height="30" alt="Delivery Bike">
                                 </div>
                             </div>
                         </div>
                         <div class="location-pin" style="width: 48px; height: 48px; top: 39%; left: 17%;">
                             <div class="pin-outer">
                                 <div class="pin-inner">
-                                    <img src="images/delivery-bike 1.svg" width="30" height="30" alt="Delivery Bike">
+                                    <img src="images/delivery-bike 1.svg" loading="lazy" width="30" height="30" alt="Delivery Bike">
                                 </div>
                             </div>
                         </div>
                         <div class="location-pin" style="width: 42px; height: 42px; top: 59%; left: 20%;">
                             <div class="pin-outer">
                                 <div class="pin-inner">
-                                    <img src="images/delivery-bike 1.svg" width="10" height="8" alt="Delivery Bike">
+                                    <img src="images/delivery-bike 1.svg" loading="lazy" width="10" height="8" alt="Delivery Bike">
                                 </div>
                             </div>
                         </div>
                         <div class="location-pin" style="width: 70px; height: 70px; top: 40%; left: 52%;">
                             <div class="pin-outer">
                                 <div class="pin-inner">
-                                    <img src="images/delivery-bike 1.svg" width="25.67" height="21.72" alt="Delivery Bike">
+                                    <img src="images/delivery-bike 1.svg" loading="lazy" width="25.67" height="21.72" alt="Delivery Bike">
                                 </div>
                             </div>
                         </div>
                         <div class="location-pin" style="width: 40px; height: 40px; top: 50%; left: 78%;">
                             <div class="pin-outer">
                                 <div class="pin-inner">
-                                    <img src="images/delivery-bike 1.svg" width="10" height="8" alt="Delivery Bike">
+                                    <img src="images/delivery-bike 1.svg" loading="lazy" width="10" height="8" alt="Delivery Bike">
                                 </div>
                             </div>
                         </div>
                         <div class="location-pin" style="width: 20px; height: 20px; top: 76%; left: 66%;">
                             <div class="pin-outer">
                                 <div class="pin-inner">
-                                    <img src="images/delivery-bike 1.svg" width="14" height="12" alt="Delivery Bike">
+                                    <img src="images/delivery-bike 1.svg" loading="lazy" width="14" height="12" alt="Delivery Bike">
                                 </div>
                             </div>
                         </div>
@@ -428,7 +428,7 @@
             <div class="card-grid">
                 <div class="card">
                     <div class="card__image" style="background-color: #E4F3F8;">
-                        <img src="images/driver.png" alt="Delivery rider on scooter">
+                        <img src="images/driver.png" loading="lazy" alt="Delivery rider on scooter">
                     </div>
                     <div class="card__content" id="card__content1">
                         <h3 class="card__title">Riders</h3>
@@ -447,7 +447,7 @@
                 </div>
                 <div class="card">
                     <div class="card__image" id="card__content1">
-                        <img src="images/BlogFood.png" alt="Food dishes and Bolt Food logo">
+                        <img src="images/BlogFood.png" loading="lazy" alt="Food dishes and Bolt Food logo">
                     </div>
                     <div class="card__content">
                         <h3 class="card__title">Restaurants</h3>
@@ -466,7 +466,7 @@
                 </div>
                 <div class="card">
                     <div class="card__image" id="card__content1">
-                        <img src="images/BlogLove.png" alt="Hands holding heart illustration">
+                        <img src="images/BlogLove.png" loading="lazy" alt="Hands holding heart illustration">
                     </div>
                     <div class="card__content">
                         <h3 class="card__title">Community</h3>
@@ -489,7 +489,7 @@
         <div class="content-section" id="content-6">
             <div class="iphone-container">
                 <div class="iphone-frame">
-                    <img src="images/Phone.jpeg" alt="Food delivery app interface" class="app-screenshot">
+                    <img src="images/Phone.jpeg" loading="lazy" alt="Food delivery app interface" class="app-screenshot">
                 </div>
                 <div class="power-button"></div>
                 <div class="volume-buttons">
@@ -503,11 +503,11 @@
                     <p>Best cooks and best delivery guys all at your service. Hot tasty food</p>
                     <div class="app-icon">
                         <a href="#" class="app-button">
-                            <img src="images/appstore.svg" alt="App Store">
+                            <img src="images/appstore.svg" loading="lazy" alt="App Store">
                             <span>App Store</span>
                         </a>
                         <a href="#" class="app-button">
-                            <img src="images/chplay.svg" alt="Play Store">
+                            <img src="images/chplay.svg" loading="lazy" alt="Play Store">
                             <span>Play Store</span>
                         </a>
                     </div>
@@ -576,15 +576,15 @@
         <div class="footer-container">
             <div class="footer-brand">
                 <div class="logo">
-                    <img src="images/Logo.png" alt="Besnik">
+                    <img src="images/Logo.png" loading="lazy" alt="Besnik">
                 </div>
                 <p class="description">
                     Retail food delivery is a courier service in which a restaurant, store, or independent food-delivery
                 </p>
                 <div class="social-icons">
-                    <a href="#" class="icon-link"><img src="images/facebook.svg" alt="Facebook"></a>
-                    <a href="#" class="icon-link"><img src="images/twitter.svg" alt="Twitter"></a>
-                    <a href="#" class="icon-link"><img src="images/linkedin.svg" alt="LinkedIn"></a>
+                    <a href="#" class="icon-link"><img src="images/facebook.svg" loading="lazy" alt="Facebook"></a>
+                    <a href="#" class="icon-link"><img src="images/twitter.svg" loading="lazy" alt="Twitter"></a>
+                    <a href="#" class="icon-link"><img src="images/linkedin.svg" loading="lazy" alt="LinkedIn"></a>
                 </div>
             </div>
             <div class="footer-nav">
